@@ -48,18 +48,19 @@ $supportedUTILTypes = array(
 //Todo: API not supported scripts:
 //custom
 /*
- * panXML_op_JSON
  * csv-import
 
  * register-ip-mgr
  * util get action filter
 */
+
 //open
 /*
  * checkpoint-exclude
  * grp-static-to-dynamic //very old; create action for pa_address-edit
  * userid-mgr
  */
+
 //Todo: more JSON support needed
 /*
  * appid-enabler
@@ -70,6 +71,7 @@ $supportedUTILTypes = array(
  * xmlissue
  * pan-config-size
  * bpa-generator
+ * panXML_op_JSON
  */
 $supportedArguments = array();
 $usageMsg = PH::boldText('USAGE: ') . "php " . __FILE__ . " in=[filename]|[api://IP]|[api://serial@IP] type=address";
